# jp-kanji-rs

./: .gitignore  Cargo.toml  README.md  doc.txt  jp.html  package-lock.json
node_server/: app.js  package.json
src/: japanese.rs  main.rs  web.rs
